# qTox

./: .gitignore  BUILD_COMPLETE.md  BUILD_MODERN_UI.md  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  DARK_MODE_ONLY.md  DIALOGS_COMPLETE.md  FEATURES.md  FINAL_FIXES.md  FINAL_FIXES_SUMMARY.md  ICON_AND_CHAT_FIXES.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  LAUNCH_GUIDE.txt  LIGHT_MODE_IMPROVEMENTS.md  MAINTAINING.md  MIGRATION.md  PHASE1_COMPLETE.md  PREMIUM_UI_INTEGRATION.md  PREMIUM_UI_PROGRESS.md  PREMIUM_UI_SUCCESS.md  PREMIUM_UI_SUMMARY.md  PROGRESS_REPORT.md  PROGRESS_SUMMARY.md  QUICK_REFERENCE.md  QUICK_REFERENCE.sh  QUICK_START.md  README.md  REFACTORING_PLAN.md  REFACTORING_ROADMAP.md  SESSION_COMPLETE.md  START_HERE.md  SUCCESS_ANNOUNCEMENT.md  TELEGRAM_UPDATE.md  TESTING_GUIDE.md  UI_FIXES_SUMMARY.md  (+8 more)
.circleci/: bazel-test  config.yml
.github/workflows/: build-test-deploy.yaml  build-test-deploy.yml
build-integrated/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  cmake_install.cmake  test_chatid  test_chatlinestorage  test_exiftransform  test_fileprogress  test_identicon  test_messageprocessor  test_paths  test_stacktrace  test_textformatter  test_toxid
build-integrated/.qt/: QtDeploySupport.cmake
build-integrated/.qt_plugins/: Qt6_QmlPlugins_Imports_qtox.cmake
build-integrated/qtox_autogen/: deps
build-integrated/qtox_static_autogen/: deps  mocs_compilation.cpp
build-integrated/src/: version.cpp
build-integrated/test_bsu_autogen/: deps
build-integrated/test_chatid_autogen/: deps
build-integrated/test_chatlinestorage_autogen/: deps
build-integrated/test_conferencemessagedispatcher_autogen/: deps
build-integrated/test_core_autogen/: deps
build-integrated/test_dbTo11_autogen/: deps
build-integrated/test_dbschema_autogen/: deps
build-integrated/test_exiftransform_autogen/: deps
build-integrated/test_fileprogress_autogen/: deps
build-integrated/test_filesform_autogen/: deps
build-integrated/test_friendlistmanager_autogen/: deps
build-integrated/test_friendmessagedispatcher_autogen/: deps
build-integrated/test_generalform_autogen/: deps
build-integrated/test_identicon_autogen/: deps
build-preview/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  cmake_install.cmake  dialogs_preview  premium_preview  qml_preview  settings_preview
build-test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  cmake_install.cmake
cmake/: Dependencies.cmake  Installation.cmake  Package.cmake  Testing.cmake
cmake/warnings/: CMakeLists.txt
src/: BUILD.bazel  ipc.cpp  nexus.cpp  nexus.h
src/qml/: CMakeLists.txt  MinimalTest.qml  PremiumMainWindow.qml  PremiumUILauncher.cpp  PremiumUILauncher.h  QmlBridge.cpp  QmlBridge.h  README.md  Theme.qml  dialogs_demo.qml  main.qml  premium_chat.qml  qml.qrc  qmldir  settings_demo.qml  settings_test.qml
src/qml/components/: ContactListItem.qml  Icon.qml  MessageBubble.qml  ModernButton.qml
src/qml/components/premium/: PremiumButton.qml  PremiumContactCard.qml  PremiumMessageBubble.qml  PremiumShadow.qml
src/qml/dialogs/: AddFriendDialog.qml  ConfirmDialog.qml  FileTransferDialog.qml  ModernDialog.qml
src/qml/models/: FriendListModel.cpp  FriendListModel.h
src/qml/pages/: SettingsPage.qml
src/qml/screens/: PremiumAddFriend.qml  PremiumChatView.qml  PremiumGroups.qml  PremiumProfile.qml  PremiumRequests.qml  PremiumSettings.qml
src/qml/themes/: PremiumTheme.qml  Theme.qml  qmldir
tools/: lsp_tidy.py  update-versions.sh  validate_pr.py
translations/: CMakeLists.txt  ar.ts  be.ts  ber.ts  bg.ts  bn.ts  cs.ts  da.ts  de.ts  el.ts  eo.ts  es.ts  et.ts  fa.ts  fi.ts  fr.ts  gl.ts  he.ts  hr.ts  hu.ts  is.ts  it.ts  ja.ts  jbo.ts  kmr.ts  kn.ts  ko.ts  li.ts  lt.ts  lv.ts  mk.ts  nb_NO.ts  nl.ts  nl_BE.ts  pl.ts  pr.ts  pt.ts  pt_BR.ts  ro.ts  ru.ts  (+18 more)
web-backend/: README.md  server.py
web-frontend/: README.md  index.html
(+199 files in other folders)
